--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.10.1",
     "bootstrap": "^5.3.8",
     "lucide-react": "^0.553.0",
     "next": "16.0.1",
