--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.10.1",
+    "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
     "lucide-react": "^0.553.0",
     "next": "16.0.1",
